--- a/Analiza Szeregów czasowych/L2_Z3/Zadanie 3.Rmd
+++ b/Analiza Szeregów czasowych/L2_Z3/Zadanie 3.Rmd
@@ -41,7 +41,8 @@ library(knitr)
 library(kableExtra)
 library(randtests)
 library(tseries)
-
+library(dplyr)
+library(tidyr)
 
 ```
 
@@ -209,6 +210,7 @@ Trend wielomianowy stopnia 3 okazał się wystarczający. Dalsze zwiększanie st
 Na wykresie ACF reszt obserwuje się co najwyżej pojedyncze przekroczenie granic istotności, które może wynikać z losowej zmienności przy skończonej liczbie opóźnień.
 Test Ljunga–Boxa nie daje podstaw do odrzucenia hipotezy o braku autokorelacji (dla rozważanego laga), dlatego reszty można uznać za nieskorelowane, a eliminację trendu stopnia 3 za adekwatną.
 
+\newpage
 # Zadanie 2
 
 ```{r pach_dla_reszt_diff}
@@ -307,6 +309,7 @@ Zarówno dla AIC jak i FPE minimum znajduje się w 5, co potwierdza wybór model
 Natomiast dla danych po eliminacji trendu kryteria AIC oraz EFT jednoznacznie wskazują na wybór modelu AR(1), pomimo testu wizualnego wskazujacego na 
 wybór AR(12). Na podstawie powyższych kryteriów w dlaszej części analizy będzie posługiwać się modelem AR(1) w przypadku danych po eliminacji trendu.
 
+\newpage
 # Zadanie 3
 
 **Tabela otrzymanych współczynników dla modeli**
@@ -337,9 +340,6 @@ var.wn.diff.ols  <- ar.fit.diff.ols$var.pred
 
 fmt <- if (knitr::is_latex_output()) "latex" else "html"
 
-# =========================
-# 1) TABELA WARIANCJI
-# =========================
 var_df <- data.frame(
   Metoda = c("yw", "mle", "burg", "ols"),
   Wariancja = c(var.wn.diff.yw, var.wn.diff.mle, var.wn.diff.burg, var.wn.diff.ols)
@@ -348,9 +348,6 @@ var_df <- data.frame(
 i_min <- which.min(var_df$Wariancja)
 
 
-# =========================
-# 2) TABELA WSPÓŁCZYNNIKÓW
-# =========================
 coef_mat <- rbind(
   yw   = coef.diff.yw,
   mle  = coef.diff.mle,
@@ -366,7 +363,9 @@ kable(coef_df, format = fmt, booktabs = TRUE,
       caption = "Estymowane współczynniki AR(p) (porównanie metod)",
       align = c("l", rep("r", ncol(coef_df) - 1)),,
   row.names = FALSE) |>
-  kable_styling(full_width = FALSE, latex_options = "hold_position")
+  kable_styling(full_width = FALSE,
+                latex_options = c("hold_position"),
+                position = "center")
 
 ```
 Widać, że dka lażdego z otrzymanych modeli współczynniki są dość podobne.
@@ -408,22 +407,22 @@ Co skłania ku jego wyborowi.
 
 ```{r dla mlte}
 p <- 1
-ar.fit.diff.yw <- ar(res3, order.max=1, aic=FALSE, method="yule-walker")
-ar.fit.diff.mle <- ar(res3, order.max=1, aic=FALSE, method="mle")
-ar.fit.diff.burg <- ar(res3, order.max=1, aic=FALSE, method="burg")
-ar.fit.diff.ols <- ar(res3, order.max=1, aic=FALSE, method="ols")
+ar.fit.res3.yw <- ar(res3, order.max=1, aic=FALSE, method="yule-walker")
+ar.fit.res3.mle <- ar(res3, order.max=1, aic=FALSE, method="mle")
+ar.fit.res3.burg <- ar(res3, order.max=1, aic=FALSE, method="burg")
+ar.fit.res3.ols <- ar(res3, order.max=1, aic=FALSE, method="ols")
 
 # Współczynniki
-coef.diff.yw   <- ar.fit.diff.yw$ar
-coef.diff.mle  <- ar.fit.diff.mle$ar
-coef.diff.burg <- ar.fit.diff.burg$ar
-coef.diff.ols  <- ar.fit.diff.ols$ar
+coef.res3.yw   <- ar.fit.res3.yw$ar
+coef.res3.mle  <- ar.fit.res3.mle$ar
+coef.res3.burg <- ar.fit.res3.burg$ar
+coef.res3.ols  <- ar.fit.res3.ols$ar
 
 # Wariancje
-var.wn.diff.yw   <- ar.fit.diff.yw$var.pred
-var.wn.diff.mle  <- ar.fit.diff.mle$var.pred
-var.wn.diff.burg <- ar.fit.diff.burg$var.pred
-var.wn.diff.ols  <- ar.fit.diff.ols$var.pred
+var.wn.res3.yw   <- ar.fit.res3.yw$var.pred
+var.wn.res3.mle  <- ar.fit.res3.mle$var.pred
+var.wn.res3.burg <- ar.fit.res3.burg$var.pred
+var.wn.res3.ols  <- ar.fit.res3.ols$var.pred
 
 fmt <- if (knitr::is_latex_output()) "latex" else "html"
 
@@ -432,7 +431,7 @@ fmt <- if (knitr::is_latex_output()) "latex" else "html"
 # =========================
 var_df <- data.frame(
   Metoda = c("yw", "mle", "burg", "ols"),
-  Wariancja = c(var.wn.diff.yw, var.wn.diff.mle, var.wn.diff.burg, var.wn.diff.ols)
+  Wariancja = c(var.wn.res3.yw, var.wn.res3.mle, var.wn.res3.burg, var.wn.res3.ols)
 )
 
 i_min <- which.min(var_df$Wariancja)
@@ -442,10 +441,10 @@ i_min <- which.min(var_df$Wariancja)
 # 2) TABELA WSPÓŁCZYNNIKÓW
 # =========================
 coef_mat <- rbind(
-  yw   = coef.diff.yw,
-  mle  = coef.diff.mle,
-  burg = coef.diff.burg,
-  ols  = coef.diff.ols
+  yw   = coef.res3.yw,
+  mle  = coef.res3.mle,
+  burg = coef.res3.burg,
+  ols  = coef.res3.ols
 )
 
 coef_df <- data.frame(Metoda = rownames(coef_mat), coef_mat, check.names = FALSE)
@@ -488,6 +487,7 @@ if (knitr::is_latex_output()) {
 
 W tym przypadku metodą o najm niejszej wariancji okazał się model burga.
 
+\newpage
 # Zadanie 4
 
 **Dla danych różnicowanych**
@@ -542,15 +542,14 @@ tab <- data.frame(
   check.names = FALSE
 )
 
-# --- 2-pozimowy nagłówek: 1) metody, 2) TL/TU
-# Ustaw nazwy kolumn drugiego poziomu:
 colnames(tab) <- c("Wsp", "TL", "TU", "TL", "TU", "TL", "TU", "TL", "TU")
 
 kable(tab, format = fmt, booktabs = TRUE, row.names = FALSE,
-      caption = "Przedziały ufności 95% dla współczynników AR(p) (TL, TU)",
       align = c("l", rep("r", ncol(tab) - 1))) |>
   add_header_above(c(" " = 1, "yw" = 2, "mle" = 2, "burg" = 2, "ols" = 2)) |>
-  kable_styling(full_width = FALSE, latex_options = "hold_position")
+  kable_styling(full_width = FALSE,
+                latex_options = c("hold_position"),
+                position = "center")
 
 
 ```
@@ -588,8 +587,6 @@ ci_TL_TU <- function(model) {
   list(TL = TL, TU = TU, p = p)
 }
 
-# --- licz CI dla każdej metody (zakładam, że masz te obiekty):
-# ar.fit.diff.yw, ar.fit.diff.mle, ar.fit.diff.burg, ar.fit.diff.ols
 
 ci_yw   <- ci_TL_TU(ar.fit.diff.yw)
 ci_mle  <- ci_TL_TU(ar.fit.diff.mle)
@@ -611,21 +608,21 @@ tab <- data.frame(
   burg_TU = round(ci_burg$TU, 4),
   ols_TL  = round(ci_ols$TL, 4),
   ols_TU  = round(ci_ols$TU, 4),
-  check.names = FALSE
-)
+  check.names = FALSE)
 
-# --- 2-pozimowy nagłówek: 1) metody, 2) TL/TU
-# Ustaw nazwy kolumn drugiego poziomu:
+
 colnames(tab) <- c("Wsp", "TL", "TU", "TL", "TU", "TL", "TU", "TL", "TU")
 
 kable(tab, format = fmt, booktabs = TRUE, row.names = FALSE,
-      caption = "Przedziały ufności 95% dla współczynników AR(p) (TL, TU)",
       align = c("l", rep("r", ncol(tab) - 1))) |>
   add_header_above(c(" " = 1, "yw" = 2, "mle" = 2, "burg" = 2, "ols" = 2)) |>
-  kable_styling(full_width = FALSE, latex_options = "hold_position")
+  kable_styling(full_width = FALSE,
+                latex_options = c("hold_position"),
+                position = "center")
 
 ```
 
+\newpage
 # Zadanie 5
 
 ```{r diag_4_models, message=FALSE, warning=FALSE}
@@ -673,7 +670,9 @@ kable(tab2, format = fmt, booktabs = TRUE, row.names = FALSE,
       caption = "Testy białoszumowości i normalności dla modeli AR(5) (dane zróżnicowane)",
       align = c("l", "r", "r", "r", "r")) |>
   add_header_above(c(" " = 1, "Białoszumowość" = 2, "Normalność" = 2)) |>
-  kable_styling(full_width = FALSE, latex_options = "hold_position")
+  kable_styling(full_width = FALSE,
+                latex_options = c("hold_position"),
+                position = "center")
 
 ```
 Każda metoda cechuje się resztami białoszumowymi o rozkładzie normalnym. Potwierdzają to aż 4 testy.
@@ -683,7 +682,7 @@ Każda metoda cechuje się resztami białoszumowymi o rozkładzie normalnym. Pot
 ```{r pełna_diagnostyka}
 
 
-library(forecast)
+
 
 model <- fit_yw          # <- wybierz: fit_yw / fit_mle / fit_burg / fit_ols
 res <- na.omit(model$resid)
@@ -699,3 +698,175 @@ par(mfrow = c(1,1))
 ```
 
 Dla metody YW widać , że reszty zachowują się bardzo białoszumowo. Wykres reszt oscyluje wokół jednego wartości bliskiej 0 . ACF ma tylko jedną niewiele odstającą obserwację . Histogram przypomina rozkład normalny, co potweirdza wykres kwantylowy.
+
+
+**Badanie reszt otrzymanych po eliminacji trendu wielomianowego**
+
+
+```{r res3, message=FALSE, warning=FALSE}
+
+p <- 1
+x <- res3
+
+fit_yw   <- ar(x, order.max = p, aic = FALSE, method = "yule-walker")
+fit_mle  <- ar(x, order.max = p, aic = FALSE, method = "mle")
+fit_burg <- ar(x, order.max = p, aic = FALSE, method = "burg")
+fit_ols  <- ar.ols(x, order.max = p, aic = FALSE)
+
+diag_metrics2 <- function(mod, name, lag_lb = 12) {
+  
+  res <- na.omit(mod$resid)
+
+  lb <- Box.test(res, lag = lag_lb, fitdf = mod$order, type = "Ljung-Box")
+  
+  tp <- turning.point.test(res)[[3]]
+
+  sh <- shapiro.test(res)
+
+  jb <- jarque.bera.test(res)
+
+  data.frame(
+    Metoda = name,
+    `Ljung-Box p` = lb$p.value,
+    `Turning-points p` = tp,
+    `Shapiro p` = sh$p.value,
+    `Jarque-Bera p` = jb$p.value
+  )
+}
+
+tab2 <- bind_rows(
+  diag_metrics2(fit_yw, "yw"),
+  diag_metrics2(fit_mle, "mle"),
+  diag_metrics2(fit_burg, "burg"),
+  diag_metrics2(fit_ols, "ols")
+) |>
+  mutate(across(where(is.numeric), ~round(.x, 4)))
+
+
+fmt <- if (knitr::is_latex_output()) "latex" else "html"
+
+kable(tab2, format = fmt, booktabs = TRUE, row.names = FALSE,
+      caption = "Testy białoszumowości i normalności dla modeli AR(5) (dane zróżnicowane)",
+      align = c("l", "r", "r", "r", "r")) |>
+  add_header_above(c(" " = 1, "Białoszumowość" = 2, "Normalność" = 2)) |>
+  kable_styling(full_width = FALSE,
+                latex_options = c("hold_position"),
+                position = "center")
+
+```
+
+W tym wypadku również reszty zachowują się biłoszumowo, co potwierdzają testy.
+
+
+**Dokładniejsza analiza YW**
+
+```{r pełna_diagnostyka_wielom}
+
+
+
+model <- fit_yw 
+
+res <- na.omit(model$resid)
+
+par(mfrow = c(2,2))
+plot(res, main = paste0("AR(", model$order, ") – reszty"), ylab = "reszty", xlab = "t")
+Acf(res, lag.max = 30, main = "ACF reszt")
+hist(res, main = "Histogram reszt", xlab = "reszty")
+qqnorm(res, main = "QQ-plot reszt"); qqline(res, col = "red")
+par(mfrow = c(1,1))
+
+
+```
+Dla reszt po eliminacji trendu wielomianowego , widać poprawę w rozkładzie histogramy, który teraz  o wiele bardziej przypomina wyres rozkładu normalnego.
+
+\newpage
+# Zadanie 6
+
+```{r prognoza}
+
+n <-  length(df)-1
+
+p <- 5
+
+# Dopasowania
+ar.fit.diff.yw   <- ar(df.diff.1, order.max = p, aic = FALSE, method = "yule-walker")
+ar.fit.diff.mle  <- ar(df.diff.1, order.max = p, aic = FALSE, method = "mle")
+ar.fit.diff.burg <- ar(df.diff.1, order.max = p, aic = FALSE, method = "burg")
+ar.fit.diff.ols  <- ar.ols(df.diff.1, order.max = p, aic = FALSE)
+
+model1 <- ar.fit.diff.yw
+model2 <- ar.fit.diff.mle
+model3 <- ar.fit.diff.burg
+model4 <- ar.fit.diff.ols
+
+model.prognoza1 <- predict(model1, n.ahead = 20)$pred
+model.prognoza2 <- predict(model2, n.ahead = 20)$pred
+model.prognoza3 <- predict(model3, n.ahead = 20)$pred
+model.prognoza4 <- predict(model4, n.ahead = 20)$pred
+
+
+prognoza1 <- diffinv(model.prognoza1, lag=1, xi = df[(n+1)])
+prognoza2 <- diffinv(model.prognoza2, lag=1, xi = df[(n+1)])
+prognoza3 <- diffinv(model.prognoza3, lag=1, xi = df[(n+1)])
+prognoza4 <- diffinv(model.prognoza4, lag=1, xi = df[(n+1)])
+prognozy_wide <- data.frame(
+  t = seq_along(prognoza1),
+  yw   = as.numeric(prognoza1),
+  mle  = as.numeric(prognoza2),
+  burg = as.numeric(prognoza3),
+  ols  = as.numeric(prognoza4)
+)
+
+prognozy_long <- prognozy_wide |>
+  pivot_longer(cols = -t, names_to = "metoda", values_to = "y")
+
+ggplot(prognozy_long, aes(x = t, y = y, color = metoda)) +
+  geom_line(linewidth = 1) +
+  labs(x = "Horyzont", y = "Prognoza")
+
+```
+
+Widać, że wszystkie prognozy przedstawiają analogiczny i podobny trend.
+
+
+**Prognozy na podstawie danych z trendem wielomianowym**
+
+```{r trend_3}
+n <-  length(df)-1
+
+
+model1 <- ar.fit.res3.yw
+model2 <- ar.fit.res3.mle
+model3 <- ar.fit.res3.burg
+model4 <- ar.fit.res3.ols
+
+model.prognoza1 <- predict(model1, n.ahead = 20)$pred
+model.prognoza2 <- predict(model2, n.ahead = 20)$pred
+model.prognoza3 <- predict(model3, n.ahead = 20)$pred
+model.prognoza4 <- predict(model4, n.ahead = 20)$pred
+
+
+trend_fc <- forecast(df.trend.x, h = 20)          # prognoza trendu
+trend_pred <- as.numeric(trend_fc$mean)
+
+prognoza1 <- as.numeric(model.prognoza1) + trend_pred
+prognoza2 <- as.numeric(model.prognoza2) + trend_pred
+prognoza3 <- as.numeric(model.prognoza3) + trend_pred
+prognoza4 <- as.numeric(model.prognoza4) + trend_pred
+
+prognozy_wide <- data.frame(
+  t = seq_along(prognoza1),
+  yw   = as.numeric(prognoza1),
+  mle  = as.numeric(prognoza2),
+  burg = as.numeric(prognoza3),
+  ols  = as.numeric(prognoza4)
+)
+
+prognozy_long <- prognozy_wide |>
+  pivot_longer(cols = -t, names_to = "metoda", values_to = "y")
+
+ggplot(prognozy_long, aes(x = t, y = y, color = metoda)) +
+  geom_line(linewidth = 1) +
+  labs(x = "Horyzont", y = "Prognoza")
+
+```
